--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
@@ -175,6 +175,24 @@
   <app-reasons-why></app-reasons-why>
 </div>
 
+<div class="mt-4">
+  <div class="cabecalho">
+    <h1 class="mr-3">
+      {{ "createProp.step1.extraInfoTitle" | translate }}
+    </h1>
+  </div>
+  <div class="mt-3">
+    <p-editor
+            class="header"
+            styleClass="p-editor-override"
+            [style]="{ height: '20vh', 'font-size': '25px' }"
+            [(ngModel)]="this.propService.propSolution.additional_info"
+            [modules]="{ counter: { container: '#counterCh', unit: 'character' } }"
+    ></p-editor>
+    <div id="counterCh" class="text-end">0</div>
+  </div>
+</div>
+
 <p-dialog
   [(visible)]="displayModal"
   [modal]="true"
