--- a/src/app/pages/ncs/list/ncs-list.component.html
+++ b/src/app/pages/ncs/list/ncs-list.component.html
@@ -136,7 +136,7 @@
 
 <div style="margin-top: 10px;">
   <p-table  responsiveLayout="scroll" #dt 
-  [globalFilterFields]="['id', 'code','emissor', 'status', 'tipos_nc_item', 'prazo','tipos_local_item', 'data_abertura', 'dsc_produto']"
+  [globalFilterFields]="['numero','emissor', 'status', 'tipos_nc_item', 'prazo','tipos_local_item', 'data_abertura', 'dsc_produto']"
   [value]="listNcs" [columns]="cols" [paginator]="true" [rows]="rows" [(first)]="first" [totalRecords]="totalRecords" 
   [showCurrentPageReport]="true" responsiveLayout="scroll" 
   currentPageReportTemplate="{{'list.currentPageMsg1' | translate}} {first} {{'list.currentPageMsg2' | translate}} {last} {{'list.currentPageMsg3' | translate}} {totalRecords} {{'list.currentPageMsg4' | translate}}" [rowsPerPageOptions]="[5,10,25,50]" [filterDelay]="0">
@@ -249,14 +249,8 @@
 
         <td>
           <span class="p-column-title">{{'list.column6' | translate}}</span>
-          <span [ngSwitch]="ncListDTO.status" >
-            <span *ngSwitchCase="'open'"> {{'global.status1'| translate}}</span>
-                        <span *ngSwitchCase="'running'">{{'global.status2'| translate}}</span>
-                        <span *ngSwitchCase="'late'"> {{'global.status3'| translate}}</span>
-                        <span *ngSwitchCase="'deleted'"> {{'global.status4'| translate}}</span>
-                        <span *ngSwitchCase="'archived'"> {{'global.status5'| translate}}</span>
-                        <span *ngSwitchCase="'canceled'"> {{'global.status6'| translate}}</span>
-                        <span *ngSwitchCase="'closed'"> {{'global.status7'| translate}}</span>
+          <span>
+              {{ncListDTO.status}}
           </span>
         </td>
 
