troquei a coluna setor afetado para parceiro na listagem de ncs

--- a/src/app/pages/ncs/list/ncs-list.component.html
+++ b/src/app/pages/ncs/list/ncs-list.component.html
@@ -239,7 +239,7 @@
 
         <td>
             <span class="p-column-title">{{'list.column4' | translate}}</span>
-            {{ncListDTO.tipos_local_item}}
+            {{ncListDTO.parceiro}}
         </td>
 
         <td>
