--- a/src/app/pages/dashboards/dashboards.component.html
+++ b/src/app/pages/dashboards/dashboards.component.html
@@ -1,17 +1,18 @@
 <div
   class="d-flex flex-column justify-content-around align-items-center"
-  style="height:7200px"
+  style=""
   *ngIf="carregou()"
 >
-  <app-nc-receptor-emissor [size]="[getWidth(), 400]"></app-nc-receptor-emissor>
-  <app-nc-status [size]="[getWidth(), 400]"></app-nc-status>
-  <app-nc-year [size]="[getWidth(), 400]"></app-nc-year>
-  <app-nc-types [size]="[getWidth(), 400]"></app-nc-types>
-  <app-nc-emissor [size]="[getWidth(), 400]"></app-nc-emissor>
-  <app-nc-receptor [size]="[getWidth(), 400]"></app-nc-receptor>
-  <app-cost-sector [size]="[getWidth(), 400]"></app-cost-sector>
-  <app-nc-count [size]="[getWidth(), 400]"></app-nc-count>
- <app-nc-actionplan [size]="[getWidth(), 400]"></app-nc-actionplan>
-  <app-nc-products [size]="[getWidth(), 400]"></app-nc-products> 
-  <app-nc-sector-proposal [size]="[getWidth(), 400]"></app-nc-sector-proposal>
+<app-nc-types [size]="[getWidth(), height]"></app-nc-types>
+  <!-- <app-nc-receptor-emissor [size]="[getWidth(), height]"></app-nc-receptor-emissor>
+  <app-nc-status [size]="[getWidth(), height]"></app-nc-status>
+  <app-nc-year [size]="[getWidth(), height]"></app-nc-year>
+  
+  <app-nc-emissor [size]="[getWidth(), height]"></app-nc-emissor>
+  <app-nc-receptor [size]="[getWidth(), height]"></app-nc-receptor>
+  <app-cost-sector [size]="[getWidth(), height]"></app-cost-sector>
+  <app-nc-count [size]="[getWidth(), height]"></app-nc-count>
+ <app-nc-actionplan [size]="[getWidth(), height]"></app-nc-actionplan>
+  <app-nc-products [size]="[getWidth(), height]"></app-nc-products> 
+  <app-nc-sector-proposal [size]="[getWidth(), height]"></app-nc-sector-proposal> -->
 </div>
