--- a/src/app/pages/dashboards/charts/nc-products/nc-products.component.html
+++ b/src/app/pages/dashboards/charts/nc-products/nc-products.component.html
@@ -3,7 +3,7 @@
     class="d-flex justify-content-center align-items-center"
     style="width: 100%"
   >
-    <h2>Quantidade de Produtos não-conformes x Produto</h2>
+    <h1 class="chart-title">{{'charts.title13' | translate}}</h1>
   </div>
   <div
     class="d-flex justify-content-center align-items-center"
