--- a/src/app/pages/dashboards/dashboards.component.html
+++ b/src/app/pages/dashboards/dashboards.component.html
@@ -3,15 +3,17 @@
   style=""
   *ngIf="carregou()"
 >
-<app-nc-types [size]="[getWidth(), height]"></app-nc-types>
-  <!-- <app-nc-receptor-emissor [size]="[getWidth(), height]"></app-nc-receptor-emissor>
+  
+  <app-nc-year-cost></app-nc-year-cost>
+  <!-- 
+    <app-nc-receptor-emissor [size]="[getWidth(), height]"></app-nc-receptor-emissor>
   <app-nc-status [size]="[getWidth(), height]"></app-nc-status>
   <app-nc-year [size]="[getWidth(), height]"></app-nc-year>
-  
+   <app-nc-types [size]="[getWidth(), height]"></app-nc-types>
   <app-nc-emissor [size]="[getWidth(), height]"></app-nc-emissor>
   <app-nc-receptor [size]="[getWidth(), height]"></app-nc-receptor>
   <app-cost-sector [size]="[getWidth(), height]"></app-cost-sector>
-  <app-nc-count [size]="[getWidth(), height]"></app-nc-count>
+<app-nc-count [size]="[getWidth(), height]"></app-nc-count>
  <app-nc-actionplan [size]="[getWidth(), height]"></app-nc-actionplan>
   <app-nc-products [size]="[getWidth(), height]"></app-nc-products> 
   <app-nc-sector-proposal [size]="[getWidth(), height]"></app-nc-sector-proposal> -->
