--- a/src/app/pages/dashboards/charts/nc-actionplan/nc-actionplan.component.html
+++ b/src/app/pages/dashboards/charts/nc-actionplan/nc-actionplan.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column align-items-center justify-content-center">
   <div class="mb-3">
-    <h2>{{ title }}</h2>
+    <h1 class="chart-title">{{'charts.title2' | translate}}</h1>
   </div>
   <div class="d-flex justify-content-start mb-5" style="width: 100%">
     <p-dropdown
