--- a/src/app/pages/dashboards/charts/nc-count/nc-count.component.html
+++ b/src/app/pages/dashboards/charts/nc-count/nc-count.component.html
@@ -1,4 +1,4 @@
 <div class="d-flex flex-column align-items-center">
-  <div><h2>{{'charts.title3' | translate}}</h2></div>
+  <div><h1 class="chart-title">{{'charts.title3' | translate}}</h1></div>
   <plotly-plot [data]="graph.data" [layout]="graph.layout"> </plotly-plot>
 </div>
