--- a/src/app/pages/dashboards/charts/nc-types/nc-types.component.html
+++ b/src/app/pages/dashboards/charts/nc-types/nc-types.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column justify-content-center align-items-start">
   <div class="d-flex justify-content-center" style="width: 100%">
-    <h2>{{'charts.title8' | translate}}</h2>
+    <h1 class="chart-title">{{'charts.title8' | translate}}</h1>
   </div>
   <div class="mb-5">
     <p-dropdown
