--- a/src/app/pages/dashboards/charts/nc-year-cost/nc-year-cost.component.html
+++ b/src/app/pages/dashboards/charts/nc-year-cost/nc-year-cost.component.html
@@ -1,1 +1,4 @@
-<p>nc-year-cost works!</p>
+<div class="d-flex flex-column align-items-center">
+  <div class="chart-title"><h1>{{'charts.title14' | translate}}</h1></div>
+  <plotly-plot [data]="graph.data" [layout]="graph.layout"> </plotly-plot>
+</div>
