HotFix: Data de abertura não aparece e erro nos gráficos na tela de listagem; Cards: #79, #80

--- a/src/app/pages/ncs/create/steps/step1/identificacao-da-nc/identificacao-da-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step1/identificacao-da-nc/identificacao-da-nc.component.html
@@ -29,9 +29,10 @@
         name="tipos_auditoria_item"
         type="text"
         pInputText
-        placeholder="Digite"
+        [placeholder]="'global.type'|translate"
         class="p-inputtext-sm input"
         id="inputAuditoria"
+        maxlength="255"
         disabled
       />
     </div>
