--- a/src/app/pages/ncs/list/ncs-list.component.html
+++ b/src/app/pages/ncs/list/ncs-list.component.html
@@ -256,7 +256,7 @@
 
         <td>
           <span class="p-column-title">{{'list.column7' | translate}}</span>
-          {{ncListDTO.data_abertura | date: 'dd/MM/yyyy'}}
+          {{ncListDTO.data_abertura}}
         </td>
 
         <td>
