--- a/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.css
+++ b/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.css
@@ -135,3 +135,38 @@ label {
 .p-editor{
   min-width: 250px;
 }
+.date-group p {
+  font-size: 12px;
+  margin-bottom: 0px;
+  color: gray;
+}
+
+.date-group {
+  font-size: 14px;
+}
+
+.date-group input {
+  outline: none;
+  background-color: white;
+  border-radius: 5px;
+  border: 2px solid rgb(51, 51, 51);
+  padding-left: 30px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 5px;
+  width: 100%;
+  font-size: 14px;
+  height: 38px;
+}
+.p-input-icon-left {
+  width: 100%;
+}
+
+.option-titulo {
+  font-weight: bold;
+}
+
+.input {
+  border-radius: 5px;
+  border: 2px solid rgb(51, 51, 51);
+}
