--- a/src/app/pages/dialogs/dados-nc/dados-nc.component.css
+++ b/src/app/pages/dialogs/dados-nc/dados-nc.component.css
@@ -131,3 +131,13 @@ h2 {
     border-color: #00344D;
     color:#00344D;
 }
+.radio-title{
+    font-size: x-large;
+    font-weight: 700;
+}
+.sticky-top {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 1020;
+}
