--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
@@ -38,7 +38,7 @@
           "
           [style]="editorStyle"
           [readonly]="true"
-          (click)="openDialog(1)"
+          (click)="(this.propService.ncProp?.radio_value=='val1'||this.propService.ncProp?.radio_value=='val2')&&openDialog(1)"
         >
           <ng-template pTemplate="header"> </ng-template>
         </p-editor>
@@ -60,7 +60,7 @@
           "
           [style]="editorStyle"
           [readonly]="true"
-          (click)="openDialog(2)"
+          (click)="(this.propService.ncProp?.radio_value=='val1'||this.propService.ncProp?.radio_value=='val2')&&openDialog(2)"
         >
           <ng-template pTemplate="header"> </ng-template>
         </p-editor>
@@ -86,7 +86,7 @@
           "
           [style]="editorStyle"
           [readonly]="true"
-          (click)="openDialog(3)"
+          (click)="(this.propService.ncProp?.radio_value=='val1'||this.propService.ncProp?.radio_value=='val2')&&openDialog(3)"
         >
           <ng-template pTemplate="header"> </ng-template>
         </p-editor>
@@ -109,7 +109,7 @@
           "
           [style]="editorStyle"
           [readonly]="true"
-          (click)="openDialog(4)"
+          (click)="(this.propService.ncProp?.radio_value=='val1'||this.propService.ncProp?.radio_value=='val2')&&openDialog(4)"
         >
           <ng-template pTemplate="header"> </ng-template> </p-editor
         ><label class="mt-1">{{
@@ -122,7 +122,7 @@
           [ngModel]="this.propService.propSolution.environment_description"
           [style]="editorStyle"
           [readonly]="true"
-          (click)="openDialog(5)"
+          (click)="(this.propService.ncProp?.radio_value=='val1'||this.propService.ncProp?.radio_value=='val2')&&openDialog(5)"
         >
           <ng-template pTemplate="header"> </ng-template> </p-editor
         ><label class="mt-1">{{
@@ -143,7 +143,7 @@
           "
           [style]="editorStyle"
           [readonly]="true"
-          (click)="openDialog(6)"
+          (click)="(this.propService.ncProp?.radio_value=='val1'||this.propService.ncProp?.radio_value=='val2')&&openDialog(6)"
         >
           <ng-template pTemplate="header"> </ng-template> </p-editor
         ><label class="mt-1">{{
@@ -164,7 +164,7 @@
         'border-radius': '5px'
       }"
       [readonly]="true"
-      (click)="openDialog(7)"
+      (click)="(this.propService.ncProp?.radio_value=='val1'||this.propService.ncProp?.radio_value=='val2')&&openDialog(7)"
     >
       <ng-template pTemplate="header"> </ng-template>
     </p-editor>
