--- a/src/app/pages/dashboards/dashboards.component.html
+++ b/src/app/pages/dashboards/dashboards.component.html
@@ -1,5 +1,13 @@
 <div class="d-flex justify-content-end align-items-end filter-row">
-  <div class="d-flex flex-column">
+  <div class="d-flex flex-column filter-div">
+    <label for="" class="filtro-title">Tipo de NC</label>
+    <p-dropdown
+      [options]="ncRadioList"
+      [(ngModel)]="ncRadioValue"
+      (onChange)="onDateChange()"
+    ></p-dropdown>
+  </div>
+  <div class="d-flex flex-column filter-div">
     <label for="" class="filtro-title">Período Inicial</label>
     <p-dropdown
       [options]="dateList"
