--- a/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
@@ -155,8 +155,9 @@
     <div class="item">
       <div class="parceiro">
         <div class="razao-social">
-          <h2>{{ "newNC.step1.partner.contactTitle" | translate }}</h2>
-          <div class="d-flex flex-row mb-4">
+          
+          <div class="d-flex flex-row mb-4 align-item-center justify-content-between">
+            <h2>{{ "newNC.step1.partner.contactTitle" | translate }}</h2>
             <div class="contato-info d-flex flex-row mr-2">
               <i class="pi pi-user"></i>
               <div>
