--- a/src/app/pages/ncs/about/view-nc/view-nc.component.html
+++ b/src/app/pages/ncs/about/view-nc/view-nc.component.html
@@ -28,7 +28,7 @@
       <i class="bi bi-arrows-collapse"></i>
       {{ "global.colapse" | translate }}
     </button>
-    <button class="btn btn-dark btn-sm ml-2" style="background-color: #00344d">
+    <button class="btn btn-dark btn-sm ml-2" (click)="editNc()" style="background-color: #00344d">
       {{ "about.ncView.editBtn" | translate }}
       <i class="bi bi-pencil-square"></i>
     </button>
