--- a/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
@@ -1,5 +1,5 @@
 <div class="cabecalho">
-  <h1 class="mr-3">{{ "sgq.steps.step1.ncEvalTitle" | translate }}</h1>
+  <h1 class="mr-3">{{ "sgq.steps.step1.ncEvalTitle" | translate }} *</h1>
   <p>
     {{ "sgq.steps.step1.ncEvalSubtitle" | translate }}
   </p>
